[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survey-any"
version = "0.2.0"
description = "CLI for the survey-any personal knowledge base (doctor, new, backlinks, index, ...). Bundles templates and the tokenizer harness; works against any content root."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
survey-any = "survey_any.cli:main"

[project.optional-dependencies]
dense = ["numpy", "sentence-transformers"]

[tool.hatch.build.targets.wheel]
packages = ["survey_any"]
